@@ -1,3 +1,6 @@
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.nparser;
 
 import java.io.IOException;
@@ -7,16 +10,10 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 
 import de.uka.ilkd.key.java.Services;
-import de.uka.ilkd.key.logic.Namespace;
+import de.uka.ilkd.key.logic.JTerm;
 import de.uka.ilkd.key.logic.NamespaceSet;
-import de.uka.ilkd.key.logic.Sequent;
-import de.uka.ilkd.key.logic.Term;
-import de.uka.ilkd.key.logic.op.SchemaVariable;
 import de.uka.ilkd.key.nparser.builder.*;
 import de.uka.ilkd.key.pp.AbbrevMap;
 import de.uka.ilkd.key.proof.init.JavaProfile;
@@ -25,8 +22,14 @@ import de.uka.ilkd.key.rule.Taclet;
 import de.uka.ilkd.key.util.parsing.BuildingException;
 import de.uka.ilkd.key.util.parsing.BuildingIssue;
 
+import org.key_project.logic.Namespace;
+import org.key_project.logic.op.sv.SchemaVariable;
+import org.key_project.prover.sequent.Sequent;
+
 import org.antlr.v4.runtime.CharStream;
 import org.antlr.v4.runtime.CharStreams;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -47,14 +50,12 @@ public class KeyIO {
 
     private final Services services;
     private final NamespaceSet nss;
-    @Nullable
-    private Namespace<SchemaVariable> schemaNamespace;
-    @Nullable
-    private List<BuildingIssue> warnings;
+    private @Nullable Namespace<SchemaVariable> schemaNamespace;
+    private List<BuildingIssue> warnings = new LinkedList<>();
     private AbbrevMap abbrevMap;
 
 
-    public KeyIO(@Nonnull Services services, @Nonnull NamespaceSet nss) {
+    public KeyIO(@NonNull Services services, @NonNull NamespaceSet nss) {
         this.services = services;
         this.nss = nss;
     }
@@ -75,7 +76,7 @@ public class KeyIO {
      * @return a valid term
      * @throws BuildingException if an unrecoverable error during construction or parsing happened
      */
-    public @Nonnull Term parseExpression(@Nonnull String expr) {
+    public @NonNull JTerm parseExpression(@NonNull String expr) {
         return parseExpression(CharStreams.fromString(expr));
     }
 
@@ -86,14 +87,18 @@ public class KeyIO {
      * @return a valid term
      * @throws BuildingException if an unrecoverable error during construction or parsing happened
      */
-    public @Nonnull Term parseExpression(@Nonnull CharStream stream) {
+    public @NonNull JTerm parseExpression(@NonNull CharStream stream) {
         KeyAst.Term ctx = ParsingFacade.parseExpression(stream);
+        return interpretExpression(ctx);
+    }
+
+    private JTerm interpretExpression(KeyAst.Term ctx) {
         ExpressionBuilder visitor = new ExpressionBuilder(services, nss);
         visitor.setAbbrevMap(abbrevMap);
         if (schemaNamespace != null) {
             visitor.setSchemaVariables(schemaNamespace);
         }
-        Term t = (Term) ctx.accept(visitor);
+        JTerm t = (JTerm) ctx.accept(visitor);
         warnings = visitor.getBuildingIssues();
         return t;
     }
@@ -106,7 +111,7 @@ public class KeyIO {
      * @return a valid sequent
      * @throws BuildingException if an unrecoverable error during construction or parsing happened
      */
-    public @Nonnull Sequent parseSequent(@Nonnull CharStream stream) {
+    public @NonNull Sequent parseSequent(@NonNull CharStream stream) {
         KeyAst.Seq ctx = ParsingFacade.parseSequent(stream);
         ExpressionBuilder visitor = new ExpressionBuilder(services, nss);
         visitor.setAbbrevMap(abbrevMap);
@@ -116,6 +121,10 @@ public class KeyIO {
         Sequent seq = (Sequent) ctx.accept(visitor);
         warnings = visitor.getBuildingIssues();
         return seq;
+    }
+
+    public Sequent parseSequent(String sequent) {
+        return parseSequent(CharStreams.fromString(sequent));
     }
 
     public Services getServices() {
@@ -164,23 +173,29 @@ public class KeyIO {
     public List<Taclet> findTaclets(KeyAst.File ctx) {
         TacletPBuilder visitor = new TacletPBuilder(services, nss);
         ctx.accept(visitor);
+        warnings.addAll(visitor.getBuildingIssues());
         return visitor.getTopLevelTaclets();
     }
 
     /**
      * @param ctx
+     * @return
      */
-    public void evalDeclarations(KeyAst.File ctx) {
+    public List<BuildingIssue> evalDeclarations(KeyAst.File ctx) {
         DeclarationBuilder declBuilder = new DeclarationBuilder(services, nss);
         ctx.accept(declBuilder);
+        warnings.addAll(declBuilder.getBuildingIssues());
+        return declBuilder.getBuildingIssues();
     }
 
     /**
      * @param ctx
      */
-    public void evalFuncAndPred(KeyAst.File ctx) {
+    public List<BuildingIssue> evalFuncAndPred(KeyAst.File ctx) {
         FunctionPredicateBuilder visitor = new FunctionPredicateBuilder(services, nss);
         ctx.accept(visitor);
+        warnings.addAll(visitor.getBuildingIssues());
+        return visitor.getBuildingIssues();
     }
 
 
@@ -196,13 +211,11 @@ public class KeyIO {
         return abbrevMap;
     }
 
-    @Nullable
     public List<BuildingIssue> getWarnings() {
         return warnings;
     }
 
-    @Nullable
-    public List<BuildingIssue> resetWarnings() {
+    public @Nullable List<BuildingIssue> resetWarnings() {
         var w = warnings;
         warnings = new LinkedList<>();
         return w;
@@ -328,7 +341,7 @@ public class KeyIO {
                 throw new IllegalStateException();
             }
             List<TacletPBuilder> parsers = ctx.stream().map(it -> new TacletPBuilder(services, nss))
-                    .collect(Collectors.toList());
+                    .toList();
             long start = System.currentTimeMillis();
             List<Taclet> taclets = new ArrayList<>(2048);
             for (int i = 0; i < ctx.size(); i++) {
@@ -346,7 +359,7 @@ public class KeyIO {
             return taclets;
         }
 
-        public Term getProblem() {
+        public JTerm getProblem() {
             // TODO weigl tbd
             return null;
         }
