@@ -1,6 +1,10 @@
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.util.pp;
 
 import java.util.ArrayList;
+import java.util.NoSuchElementException;
 
 /**
  * The intermediate layer of the pretty printing library. Using the block size information provided
@@ -94,7 +98,7 @@ class Printer<M> {
     /**
      * write a break. <code>followingLength</code> should be the space needed by the material up to
      * the next corresponding closeBlock() or printBreak(), and is used to decide whether the
-     * current line is continues, or a new (indented) line is begun.
+     * current line is continued, or a new (indented) line is begun.
      */
     void printBreak(int width, int offset, int followingLength) {
         if (topBreak() == CONSISTENT
@@ -140,6 +144,7 @@ class Printer<M> {
         try {
             marginStack.remove(marginStack.size() - 1);
         } catch (IndexOutOfBoundsException e) {
+            // FIXME weigl: ignore this exception.
             throw new UnbalancedBlocksException();
         }
     }
@@ -147,8 +152,8 @@ class Printer<M> {
     /** return the topmost element of the space stack without popping it. */
     private int top() {
         try {
-            return marginStack.get(marginStack.size() - 1);
-        } catch (IndexOutOfBoundsException e) {
+            return marginStack.getLast();
+        } catch (NoSuchElementException e) {
             throw new UnbalancedBlocksException();
         }
     }
