@@ -1,7 +1,10 @@
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package de.uka.ilkd.key.gui;
 
 import java.io.File;
-import java.io.IOException;
+import java.nio.file.Path;
 import java.util.Collection;
 import java.util.LinkedList;
 import java.util.List;
@@ -21,7 +24,7 @@ import de.uka.ilkd.key.gui.notification.events.GeneralFailureEvent;
 import de.uka.ilkd.key.gui.notification.events.NotificationEvent;
 import de.uka.ilkd.key.macros.ProofMacro;
 import de.uka.ilkd.key.macros.ProofMacroFinishedInfo;
-import de.uka.ilkd.key.parser.Location;
+import de.uka.ilkd.key.nparser.KeyAst;
 import de.uka.ilkd.key.proof.Goal;
 import de.uka.ilkd.key.proof.Proof;
 import de.uka.ilkd.key.proof.ProofAggregate;
@@ -30,22 +33,27 @@ import de.uka.ilkd.key.proof.init.*;
 import de.uka.ilkd.key.proof.init.IPersistablePO.LoadedPOContainer;
 import de.uka.ilkd.key.proof.io.*;
 import de.uka.ilkd.key.proof.io.AbstractProblemLoader.ReplayResult;
-import de.uka.ilkd.key.prover.ProverCore;
-import de.uka.ilkd.key.prover.TaskFinishedInfo;
-import de.uka.ilkd.key.prover.TaskStartedInfo;
-import de.uka.ilkd.key.prover.impl.ApplyStrategyInfo;
 import de.uka.ilkd.key.rule.IBuiltInRuleApp;
+import de.uka.ilkd.key.settings.ProofIndependentSettings;
+import de.uka.ilkd.key.settings.ViewSettings;
 import de.uka.ilkd.key.speclang.PositionedString;
 import de.uka.ilkd.key.strategy.StrategyProperties;
 import de.uka.ilkd.key.ui.AbstractMediatorUserInterfaceControl;
 import de.uka.ilkd.key.ui.MediatorProofControl;
 import de.uka.ilkd.key.util.KeYConstants;
 import de.uka.ilkd.key.util.MiscTools;
-import de.uka.ilkd.key.util.Pair;
 import de.uka.ilkd.key.util.ThreadUtilities;
 
+import org.key_project.prover.engine.ProverCore;
+import org.key_project.prover.engine.TaskFinishedInfo;
+import org.key_project.prover.engine.TaskStartedInfo;
+import org.key_project.prover.engine.impl.ApplyStrategyInfo;
 import org.key_project.util.collection.ImmutableSet;
+import org.key_project.util.collection.Pair;
+import org.key_project.util.java.SwingUtil;
 
+import org.antlr.v4.runtime.misc.ParseCancellationException;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -87,6 +95,14 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
         };
     }
 
+
+    public void loadProblem(Path file, Consumer<ProblemLoader> configure) {
+        mainWindow.addRecentFile(file.toAbsolutePath().toString());
+        ProblemLoader problemLoader = getProblemLoader(file, null, null, null, getMediator());
+        configure.accept(problemLoader);
+        problemLoader.runAsynchronously();
+    }
+
     /**
      * loads the problem or proof from the given file
      *
@@ -94,22 +110,28 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
      * @param classPath the class path entries to use.
      * @param bootClassPath the boot class path to use.
      */
-    public void loadProblem(File file, List<File> classPath, File bootClassPath,
-            List<File> includes) {
-        mainWindow.addRecentFile(file.getAbsolutePath());
+    public void loadProblem(Path file, @Nullable List<Path> classPath,
+            @Nullable Path bootClassPath, @Nullable List<Path> includes) {
+        mainWindow.addRecentFile(file.toAbsolutePath().toString());
         ProblemLoader problemLoader =
             getProblemLoader(file, classPath, bootClassPath, includes, getMediator());
         problemLoader.runAsynchronously();
     }
 
+    public void loadProblem(Path file, Profile profile) {
+        loadProblem(file, (pl) -> {
+            pl.setProfileOfNewProofs(profile);
+        });
+    }
+
     @Override
-    public void loadProblem(File file) {
+    public void loadProblem(Path file) {
         loadProblem(file, null, null, null);
     }
 
     @Override
-    public void loadProofFromBundle(File proofBundle, File proofFilename) {
-        mainWindow.addRecentFile(proofBundle.getAbsolutePath());
+    public void loadProofFromBundle(Path proofBundle, Path proofFilename) {
+        mainWindow.addRecentFile(proofBundle.toAbsolutePath().toString());
         ProblemLoader problemLoader =
             getProblemLoader(proofBundle, null, null, null, getMediator());
         problemLoader.setProofPath(proofFilename);
@@ -123,12 +145,12 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
 
     @Override
     public void progressStopped(Object sender) {
-        mainWindow.getMediator().startInterface(true);
+        // no need to call startInterface(), will be done by ProblemLoader once loading is done
     }
 
     @Override
     public void reportException(Object sender, ProofOblInput input, Exception e) {
-        reportStatus(sender, input.name() + " failed");
+        IssueDialog.showExceptionDialog(mainWindow, e);
     }
 
     @Override
@@ -149,68 +171,80 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
     @Override
     public void taskFinished(TaskFinishedInfo info) {
         super.taskFinished(info);
+        // ensure all UI modifying operations are done on the UI thread
+        SwingUtilities.invokeLater(() -> taskFinishedInternal(info));
+    }
+
+    private void taskFinishedInternal(TaskFinishedInfo info) {
         if (info != null && info.getSource() instanceof ProverCore) {
             if (!isAtLeastOneMacroRunning()) {
                 resetStatus(this);
             }
-            ApplyStrategyInfo result = (ApplyStrategyInfo) info.getResult();
+            ApplyStrategyInfo<Proof, Goal> result =
+                (ApplyStrategyInfo<Proof, Goal>) info.getResult();
 
-            Proof proof = info.getProof();
-            if (proof != null && !proof.closed()
+            final Proof proof = (Proof) info.getProof();
+            if (proof != null && !proof.isDisposed() && !proof.closed()
                     && mainWindow.getMediator().getSelectedProof() == proof) {
                 Goal g = result.nonCloseableGoal();
                 if (g == null) {
                     g = proof.openGoals().head();
                 }
                 mainWindow.getMediator().goalChosen(g);
-                if (inStopAtFirstUncloseableGoalMode(info.getProof())) {
+                if (inStopAtFirstUncloseableGoalMode(proof)) {
                     // iff Stop on non-closeable Goal is selected a little
                     // popup is generated and proof is stopped
                     AutoDismissDialog dialog = new AutoDismissDialog(
                         "Couldn't close Goal Nr. " + g.node().serialNr() + " automatically");
                     dialog.show();
                 }
+                if (!isAtLeastOneMacroRunning()) {
+                    showNotification("Automated proof search", info.toString());
+                }
             }
             mainWindow.displayResults(info.toString());
-        } else if (info != null && info.getSource() instanceof ProofMacro) {
+        } else if (info != null && info.getSource() instanceof ProofMacro macro) {
             if (!isAtLeastOneMacroRunning()) {
-                resetStatus(this);
+                mainWindow.hideStatusProgress();
                 assert info instanceof ProofMacroFinishedInfo;
-                Proof proof = info.getProof();
+                final Proof proof = (Proof) info.getProof();
                 if (proof != null && !proof.closed()
                         && mainWindow.getMediator().getSelectedProof() == proof) {
                     Goal g = proof.openGoals().head();
                     mainWindow.getMediator().goalChosen(g);
-                    if (inStopAtFirstUncloseableGoalMode(info.getProof())) {
+                    if (inStopAtFirstUncloseableGoalMode(proof)) {
                         // iff Stop on non-closeable Goal is selected a little
                         // popup is generated and proof is stopped
                         AutoDismissDialog dialog = new AutoDismissDialog(
                             "Couldn't close Goal Nr. " + g.node().serialNr() + " automatically");
                         dialog.show();
                     }
+                    if (!isAtLeastOneMacroRunning()) {
+                        showNotification(macro.getName(), info.toString());
+                    }
                 }
             }
-        } else if (info != null && info.getSource() instanceof ProblemLoader) {
+        } else if (info != null && info.getSource() instanceof ProblemLoader problemLoader) {
             resetStatus(this);
             Throwable result = (Throwable) info.getResult();
             if (info.getResult() != null) {
+                LOGGER.error("", result);
+                if (result instanceof ParseCancellationException) {
+                    result = result.getCause();
+                }
                 IssueDialog.showExceptionDialog(mainWindow, result);
             } else if (getMediator().getUI().isSaveOnly()) {
                 mainWindow.displayResults("Finished Saving!");
             } else {
                 KeYMediator mediator = mainWindow.getMediator();
                 mediator.getNotationInfo().refresh(mediator.getServices());
-                ProblemLoader problemLoader = (ProblemLoader) info.getSource();
                 if (problemLoader.hasProofScript()) {
-                    Pair<String, Location> scriptAndLoc;
-                    try {
-                        scriptAndLoc = problemLoader.readProofScript();
-                        ProofScriptWorker psw = new ProofScriptWorker(mainWindow.getMediator(),
-                            scriptAndLoc.first, scriptAndLoc.second);
+                    KeyAst.ProofScript scriptAndLoc = problemLoader.getProofScript();
+                    if (scriptAndLoc != null) {
+                        ProofScriptWorker psw =
+                            new ProofScriptWorker(mainWindow.getMediator(), scriptAndLoc);
                         psw.init();
                         psw.execute();
-                    } catch (ProofInputException e) {
-                        LOGGER.warn("Failed to load proof", e);
                     }
                 } else if (macroChosen()) {
                     applyMacro();
@@ -224,6 +258,24 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
         }
         // this seems to be a good place to free some memory
         Runtime.getRuntime().gc();
+    }
+
+    /**
+     * Show a notification, if enabled by the settings.
+     *
+     * @param title header
+     * @param text body
+     */
+    private void showNotification(String title, String text) {
+        var mode =
+            ProofIndependentSettings.DEFAULT_INSTANCE.getViewSettings().notificationAfterMacro();
+        if (mode.equals(ViewSettings.NOTIFICATION_ALWAYS)) {
+            SwingUtil.showNotification(title, text);
+        } else if (mode.equals(ViewSettings.NOTIFICATION_UNFOCUSED)) {
+            if (!MainWindow.getInstance().isActive()) {
+                SwingUtil.showNotification(title, text);
+            }
+        }
     }
 
     protected boolean inStopAtFirstUncloseableGoalMode(Proof proof) {
@@ -242,7 +294,7 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
     @Override
     public void taskStarted(TaskStartedInfo info) {
         super.taskStarted(info);
-        mainWindow.setStatusLine(info.getMessage(), info.getSize());
+        mainWindow.setStatusLine(info.message(), info.size());
     }
 
     @Override
@@ -312,12 +364,12 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
      * {@inheritDoc}
      */
     @Override
-    public AbstractProblemLoader load(Profile profile, File file, List<File> classPath,
-            File bootClassPath, List<File> includes, Properties poPropertiesToForce,
+    public AbstractProblemLoader load(Profile profile, Path file, List<Path> classPath,
+            Path bootClassPath, List<Path> includes, Properties poPropertiesToForce,
             boolean forceNewProfileOfNewProofs, Consumer<Proof> callback)
             throws ProblemLoaderException {
         if (file != null) {
-            mainWindow.getRecentFiles().addRecentFile(file.getAbsolutePath());
+            mainWindow.getRecentFiles().addRecentFile(file.toAbsolutePath().toString());
         }
         try {
             getMediator().stopInterface(true);
@@ -330,7 +382,7 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
 
     /**
      * Save proof in file. If autoSave is on, this will potentially overwrite already existing proof
-     * files with the same name. Otherwise the save dialog pops up. For loaded proofs both are
+     * files with the same name. Otherwise, the save dialog pops up. For loaded proofs both are
      * turned off by default, i.e. only manual saving is possible, and the save dialog never pops up
      * automatically (except for hitting the "Save ..." or "Save current proof" button).
      *
@@ -338,17 +390,17 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
      * @param fileExtension the respective file extension
      * @return the saved proof as a file
      */
-    public File saveProof(Proof proof, String fileExtension) {
+    public Path saveProof(Proof proof, String fileExtension) {
         final MainWindow mainWindow = MainWindow.getInstance();
         final KeYFileChooser fc = KeYFileChooser.getFileChooser("Choose filename to save proof");
         fc.setFileFilter(KeYFileChooser.DEFAULT_FILTER);
 
-        Pair<File, String> f = fileName(proof, fileExtension);
-        final int result = fc.showSaveDialog(mainWindow, f.first, f.second);
-        File file = null;
+        Pair<Path, String> f = fileName(proof, fileExtension);
+        final int result = fc.showSaveDialog(mainWindow, f.first.toFile(), f.second);
+        Path file = null;
         if (result == JFileChooser.APPROVE_OPTION) { // saved
-            file = fc.getSelectedFile();
-            final String filename = file.getAbsolutePath();
+            file = fc.getSelectedFile().toPath();
+            final String filename = file.toAbsolutePath().toString();
             ProofSaver saver;
             if (fc.useCompression()) {
                 saver = new GZipProofSaver(proof, filename, KeYConstants.INTERNAL_VERSION);
@@ -357,9 +409,10 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
             }
             String errorMsg;
             try {
+                getMediator().stopInterface(true);
                 errorMsg = saver.save();
-            } catch (IOException e) {
-                errorMsg = e.toString();
+            } finally {
+                getMediator().startInterface(true);
             }
             if (errorMsg != null) {
                 mainWindow.notify(
@@ -384,18 +437,13 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
             KeYFileChooser.getFileChooser("Choose filename to save proof");
         fileChooser.setFileFilter(KeYFileChooser.PROOF_BUNDLE_FILTER);
 
-        Pair<File, String> f = fileName(proof, ".zproof");
-        final int result = fileChooser.showSaveDialog(mainWindow, f.first, f.second);
+        Pair<Path, String> f = fileName(proof, ".zproof");
+        final int result = fileChooser.showSaveDialog(mainWindow, f.first.toFile(), f.second);
         if (result == JFileChooser.APPROVE_OPTION) {
-            File file = fileChooser.getSelectedFile();
-            ProofSaver saver = new ProofBundleSaver(proof, file);
+            final Path file = fileChooser.getSelectedFile().toPath();
+            final ProofSaver saver = new ProofBundleSaver(proof, file);
+            final String errorMsg = saver.save();
 
-            String errorMsg;
-            try {
-                errorMsg = saver.save();
-            } catch (IOException e) {
-                errorMsg = e.toString();
-            }
             if (errorMsg != null) {
                 mainWindow.notify(
                     new GeneralFailureEvent("Saving Proof failed.\n Error: " + errorMsg));
@@ -405,11 +453,11 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
         }
     }
 
-    protected static Pair<File, String> fileName(Proof proof, String fileExtension) {
+    protected static Pair<Path, String> fileName(Proof proof, String fileExtension) {
         // TODO: why do we use GUI components here?
         final KeYFileChooser jFC = KeYFileChooser.getFileChooser("Choose filename to save proof");
 
-        File selectedFile = null;
+        Path selectedFile = null;
         if (proof != null) {
             selectedFile = proof.getProofFile();
         }
@@ -423,9 +471,9 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
                 name = "Taclet:" + name.substring(prefix.length());
             }
             defaultName = MiscTools.toValidFileName(name) + fileExtension;
-            selectedFile = new File(jFC.getCurrentDirectory(), defaultName);
-        } else if (selectedFile.getName().endsWith(".proof") && fileExtension.equals(".proof")) {
-            defaultName = selectedFile.getName();
+            selectedFile = new File(jFC.getCurrentDirectory(), defaultName).toPath();
+        } else if (selectedFile.toString().endsWith(".proof") && fileExtension.equals(".proof")) {
+            defaultName = selectedFile.getFileName().toString();
         } else {
             String proofName = proof.name().toString();
             if (proofName.endsWith(".key")) {
@@ -434,7 +482,7 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
                 proofName = proofName.substring(0, proofName.lastIndexOf(".proof"));
             }
             defaultName = MiscTools.toValidFileName(proofName) + fileExtension;
-            selectedFile = new File(selectedFile.getParentFile(), defaultName);
+            selectedFile = selectedFile.getParent().resolve(defaultName);
         }
         return new Pair<>(selectedFile, defaultName);
     }
@@ -457,6 +505,7 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
     @Override
     public void registerProofAggregate(ProofAggregate pa) {
         super.registerProofAggregate(pa);
+        getMediator().fireProofLoaded(pa.getFirstProof());
         mainWindow.addProblem(pa);
         mainWindow.setStandardStatusLine();
     }
@@ -478,20 +527,14 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
                 } else {
                     this.reportStatus(this, result.getStatus());
                 }
-                getMediator().getSelectionModel().setSelectedNode(result.getNode());
                 if (result.hasErrors()) {
                     throw new ProblemLoaderException(loader,
                         "Proof could only be loaded partially.\n" + "In summary "
                             + result.getErrorList().size()
                             + " not loadable rule application(s) have been detected.\n"
-                            + "The first one:\n" + result.getErrorList().get(0).getMessage(),
-                        result.getErrorList().get(0));
+                            + "The first one:\n" + result.getErrorList().getFirst().getMessage(),
+                        result.getErrorList().getFirst());
                 }
-            } else {
-                // should never happen as replay always returns a result object
-                // TODO (DS): Why is it then there? If this happens, we will get\\
-                // a NullPointerException just a line below...
-                getMediator().getSelectionModel().setSelectedNode(loader.getProof().root());
             }
         }
         getMediator().resetNrGoalsClosedByHeuristics();
@@ -535,14 +578,15 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
      * @param includes Optional includes to consider.
      * @param makeMainWindowVisible Make KeY's {@link MainWindow} visible if it is not already
      *        visible?
-     * @param forceNewProfileOfNewProofs {@code} true {@link #profileOfNewProofs} will be used as
+     * @param forceNewProfileOfNewProofs {@code} true {@code AbstractProfile.profileOfNewProofs}
+     *        will be used as
      *        {@link Profile} of new proofs, {@code false} {@link Profile} specified by problem file
      *        will be used for new proofs.
      * @return The {@link KeYEnvironment} which contains all references to the loaded location.
      * @throws ProblemLoaderException Occurred Exception
      */
     public static KeYEnvironment<WindowUserInterfaceControl> loadInMainWindow(Profile profile,
-            File location, List<File> classPaths, File bootClassPath, List<File> includes,
+            Path location, List<Path> classPaths, Path bootClassPath, List<Path> includes,
             boolean forceNewProfileOfNewProofs, boolean makeMainWindowVisible)
             throws ProblemLoaderException {
         MainWindow main = MainWindow.getInstance();
@@ -563,7 +607,7 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
 
     @Override
     public void reportWarnings(ImmutableSet<PositionedString> warnings) {
-        IssueDialog.showWarningsIfNecessary(mainWindow, warnings);
+        SwingUtilities.invokeLater(() -> IssueDialog.showWarningsIfNecessary(mainWindow, warnings));
     }
 
     /**
@@ -578,9 +622,10 @@ public class WindowUserInterfaceControl extends AbstractMediatorUserInterfaceCon
     public void showIssueDialog(Collection<PositionedString> issues) {
         final var set = issues.stream()
                 .map(it -> new PositionedIssueString(
-                    it.text, it.fileName, it.pos, ""))
+                    it.text, it.location, ""))
                 .collect(Collectors.toSet());
         var dialog = new IssueDialog(mainWindow, "Issues", set, true, null);
         dialog.setVisible(true);
     }
+
 }
