@@ -1,21 +1,20 @@
+/* This file is part of KeY - https://key-project.org
+ * KeY is licensed under the GNU General Public License Version 2
+ * SPDX-License-Identifier: GPL-2.0-only */
 package org.key_project.slicing.ui;
 
 import java.awt.*;
 import java.awt.event.KeyAdapter;
 import java.awt.event.KeyEvent;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Comparator;
+import java.util.*;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import javax.swing.*;
 
 import de.uka.ilkd.key.gui.MainWindow;
 import de.uka.ilkd.key.gui.configuration.Config;
-import de.uka.ilkd.key.util.Quadruple;
 
 import org.key_project.slicing.RuleStatistics;
+import org.key_project.slicing.RuleStatistics.RuleStatisticEntry;
 import org.key_project.slicing.analysis.AnalysisResults;
 
 /**
@@ -85,13 +84,13 @@ public class RuleStatisticsDialog extends JDialog {
                 + buttonPane.getPreferredSize().height
                 + 100;
         setSize(w, h);
-        setLocationRelativeTo(window);
 
         statisticsPane.setText(genTable(
             statistics.sortBy(
-                Comparator.comparing((Quadruple<String, Integer, Integer, Integer> it) -> it.second)
+                Comparator.comparing(RuleStatisticEntry::numberOfApplications)
                         .reversed())));
         statisticsPane.setCaretPosition(0);
+        setLocationRelativeTo(window);
     }
 
     /**
@@ -111,36 +110,28 @@ public class RuleStatisticsDialog extends JDialog {
         JButton sortButton1 = new JButton("Sort by name");
         sortButton1.addActionListener(event -> {
             statisticsPane.setText(genTable(
-                statistics.sortBy(Comparator.comparing(it -> it.first))));
+                statistics.sortBy(Comparator.comparing(RuleStatisticEntry::ruleName))));
             statisticsPane.setCaretPosition(0);
         });
         JButton sortButton2 = new JButton("Sort by total");
         sortButton2.addActionListener(event -> {
             statisticsPane.setText(genTable(
                 statistics.sortBy(
-                    Comparator
-                            .comparing(
-                                (Quadruple<String, Integer, Integer, Integer> it) -> it.second)
-                            .reversed())));
+                    Comparator.comparing(RuleStatisticEntry::numberOfApplications).reversed())));
             statisticsPane.setCaretPosition(0);
         });
         JButton sortButton3 = new JButton("Sort by useless");
         sortButton3.addActionListener(event -> {
             statisticsPane.setText(genTable(
-                statistics.sortBy(
-                    Comparator
-                            .comparing(
-                                (Quadruple<String, Integer, Integer, Integer> it) -> it.third)
-                            .reversed())));
+                statistics.sortBy(Comparator
+                        .comparing(RuleStatisticEntry::numberOfUselessApplications).reversed())));
             statisticsPane.setCaretPosition(0);
         });
         JButton sortButton4 = new JButton("Sort by initial useless");
         sortButton4.addActionListener(event -> {
             statisticsPane.setText(genTable(
                 statistics.sortBy(
-                    Comparator
-                            .comparing(
-                                (Quadruple<String, Integer, Integer, Integer> it) -> it.fourth)
+                    Comparator.comparing(RuleStatisticEntry::numberOfInitialUselessApplications)
                             .reversed())));
             statisticsPane.setCaretPosition(0);
         });
@@ -170,33 +161,38 @@ public class RuleStatisticsDialog extends JDialog {
      * @param rules statistics on rule apps (see {@link RuleStatistics})
      * @return HTML
      */
-    private String genTable(List<Quadruple<String, Integer, Integer, Integer>> rules) {
+    private String genTable(List<RuleStatisticEntry> rules) {
         List<String> columns = List.of("Rule name", "Total applications", "Useless applications",
             "Initial useless applications");
 
         List<Collection<String>> rows = new ArrayList<>();
         // summary row
         int uniqueRules = rules.size();
-        int totalSteps = rules.stream().mapToInt(it -> it.second).sum();
-        int uselessSteps = rules.stream().mapToInt(it -> it.third).sum();
-        int initialUseless = rules.stream().mapToInt(it -> it.fourth).sum();
+        int totalSteps = rules.stream().mapToInt(RuleStatisticEntry::numberOfApplications).sum();
+        int uselessSteps =
+            rules.stream().mapToInt(RuleStatisticEntry::numberOfUselessApplications).sum();
+        int initialUseless =
+            rules.stream().mapToInt(RuleStatisticEntry::numberOfInitialUselessApplications).sum();
         rows.add(List.of(String.format("(all %d rules)", uniqueRules), Integer.toString(totalSteps),
             Integer.toString(uselessSteps), Integer.toString(initialUseless)));
         // next summary row
-        List<Quadruple<String, Integer, Integer, Integer>> rulesBranching =
-            rules.stream().filter(it -> statistics.branches(it.first)).collect(Collectors.toList());
+        List<RuleStatisticEntry> rulesBranching =
+            rules.stream().filter(it -> statistics.branches(it.ruleName())).toList();
         int uniqueRules2 = rulesBranching.size();
-        totalSteps = rulesBranching.stream().mapToInt(it -> it.second).sum();
-        uselessSteps = rulesBranching.stream().mapToInt(it -> it.third).sum();
-        initialUseless = rulesBranching.stream().mapToInt(it -> it.fourth).sum();
+        totalSteps =
+            rulesBranching.stream().mapToInt(RuleStatisticEntry::numberOfApplications).sum();
+        uselessSteps =
+            rulesBranching.stream().mapToInt(RuleStatisticEntry::numberOfUselessApplications).sum();
+        initialUseless = rulesBranching.stream()
+                .mapToInt(RuleStatisticEntry::numberOfInitialUselessApplications).sum();
         rows.add(List.of(String.format("(%d branching rules)", uniqueRules2),
             Integer.toString(totalSteps), Integer.toString(uselessSteps),
             Integer.toString(initialUseless)));
         rules.forEach(a -> {
-            String name = a.first;
-            Integer all = a.second;
-            Integer useless = a.third;
-            Integer iua = a.fourth;
+            String name = a.ruleName();
+            Integer all = a.numberOfApplications();
+            Integer useless = a.numberOfUselessApplications();
+            Integer iua = a.numberOfInitialUselessApplications();
             rows.add(List.of(name, all.toString(), useless.toString(), iua.toString()));
         });
 
